--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </li>
       
       <li class="navigation-item">
-        <a class="navigation-link" href=""></a>
+        <a class="navigation-link" href="http://yradunchev.github.io/about/">About</a>
       </li>
       
     </ul>
