--- a/404.html
+++ b/404.html
@@ -70,6 +70,8 @@
       <footer class="footer">
   <section class="container">
     
+      <p>zup?</p>
+    
        Powered by <a href="https://gohugo.io/">Hugo</a> & <a href="https://github.com/luizdepra/hugo-coder/">Coder</a>. 
   </section>
 </footer>
